article.html 自适应

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="">
                     <ul>
-                        <a href=""><li class="javascript">
+                        <a href="article.html"><li class="javascript">
                             <div class="img"></div>
                             <div class="text">
                                 <h3>javascript</h3>
