--- a/article.html
+++ b/article.html
@@ -75,7 +75,25 @@
             <div class="tongji"></div>
         </div>
     </div>
+
+    <div id="to_top">返回顶部</div>
 <script src="jquery-1.11.3.min.js"></script>
 <script src="article.js"></script>
+<script type="text/javascript">
+window.onload = function(){
+    var oTop = document.getElementById("to_top");
+    var screenw = document.documentElement.clientWidth || document.body.clientWidth;
+    var screenh = document.documentElement.clientHeight || document.body.clientHeight;
+    oTop.style.left = screenw - oTop.offsetWidth +"px";
+    oTop.style.top = screenh - oTop.offsetHeight + "px";
+    window.onscroll = function(){
+        var scrolltop = document.documentElement.scrollTop || document.body.scrollTop;
+        oTop.style.top = screenh - oTop.offsetHeight + scrolltop +"px";
+    }
+    oTop.onclick = function(){
+    document.documentElement.scrollTop = document.body.scrollTop =0;
+    }
+}  
+</script>
 </body>
 </html>
