--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>蠡湖Lab</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?1b1125fd8ebbf74cdbdfc82961d578ee";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
     <div class="main">
@@ -57,7 +66,6 @@
 
         <div class="footer">
             <div class="beian">Copyright © 2017 Lihu Lab All Rights Reserved 备案号：苏ICP备17029995号-1</div>
-            <div class="tongji"></div>
         </div>
     </div>
 <script type="text/javascript">
