左侧栏与中间栏齐平

--- a/article.html
+++ b/article.html
@@ -96,6 +96,15 @@
                             &lt;/html&gt;
                         </code>
                     </pre>
+                    <h2>实例解析</h2>
+                    <p>&lt;!DOCTYPE html&gt; 声明为 HTML5 文档</p>
+                    <p>&lt;html&gt; 元素是 HTML 页面的根元素</p>
+                    <p>&lt;head&gt; 元素包含了文档的元（meta）数据</p>
+                    <p>&lt;title&gt; 元素描述了文档的标题</p>
+                    <p>&lt;body&gt; 元素包含了可见的页面内容</p>
+                    <p>&lt;h1&gt; 元素定义一个大标题</p>
+                    <p>&lt;p&gt; 元素定义一个段落</p>
+                    
                 </div>
                 <div class="link">
                     <div class="previous"><a href="">上一篇</a></div>
