--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="">
     <title>蠡湖Lab</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -22,7 +23,7 @@
             <div class="nav">
                 <div class="img"><a href="index.html"><img src="img/lihu.png" alt=""></a></div>
                 <ul>
-                    <li><a href="">前端教程</a></li>
+                    <li><a href="">前端教程啊啊</a></li>
                     <li><a href="">后端教程</a></li>
                     <li><a href="">aaa</a></li>
                     <li class="navhidden"><a href="">bbb</a></li>
@@ -43,9 +44,9 @@
                 <div class="">
                     <ul>
                         <a href="article.html"><li class="javascript">
-                            <div class="img"></div>
-                            <div class="text">
-                                <h3>javascript</h3>
+                            <h3 title="Django REST framework 入门教程">Django REST framework 入门教程</h3>
+                            <img src="img/nav.png" alt="">
+                            <div class="text">                                
 					            <p>javascript教程啊沙发松岛枫敖德萨发生的发安非艾佛森 发送</p>
                             </div>
                         </li></a>
