--- a/article.html
+++ b/article.html
@@ -120,10 +120,10 @@
         </div>
     </div>
 
-    <div id="to_top">返回顶部</div>
+    <!--<div id="to_top">返回顶部</div>-->
 <script src="jquery-1.11.3.min.js"></script>
 <script src="article.js"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 window.onload = function(){
     var oTop = document.getElementById("to_top");
     var screenw = document.documentElement.clientWidth || document.body.clientWidth;
@@ -138,6 +138,6 @@ window.onload = function(){
         document.documentElement.scrollTop = document.body.scrollTop = 0;
     }
 }  
-</script>
+</script>-->
 </body>
 </html>
