--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <a href="article.html"><li class="javascript">
                             <h3 title="Django REST framework 入门教程">Django REST framework 入门教程</h3>
-                            <img src="img/nav.png" alt="">
+                            <img src="img/rest.png" alt="Django REST framework">
                             <div class="text">                                
 					            <p>javascript教程啊沙发松岛枫敖德萨发生的发安非艾佛森 发送</p>
                             </div>
